# rust_book

_001_structs/: Cargo.toml
_001_structs/src/: main.rs  main10.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs  main7_destructing.rs  main8_destrc.rs  main9.rs
_002_generics_option_result/: Cargo.toml
_002_generics_option_result/src/: main.rs  main10_while_let.rs  main11_summary.rs  main2.rs  main3_option.rs  main4_option.rs  main5_option.rs  main6_result.rs  main7_if_let.rs  main8_let_else.rs  main9_let_else.rs
_003_collections/: Cargo.toml
_003_collections/src/: main.rs  main10_ques_mark.rs  main11_ques_mark.rs  main12_error_handlings.rs  main2_hash.rs  main3_hash_old.rs  main4_entry.rs  main5_entry.rs  main6_hash_set.rs  main7_binary_heap.rs  main8_deque.rs  main9_ques_mark.rs
_004_traits/: Cargo.toml
_004_traits/src/: main.rs  main10_from.rs  main11_from.rs  main12_orphan_rule.rs  main13_same_rule.rs  main14_as_ref.rs  main2_trait.rs  main3_impl.rs  main4_impl.rs  main5_trait.rs  main6_trait_bound.rs  main7_trait.rs  main8_trait.rs  main9_trait.rs
_005_iterators_and_closures/: Cargo.toml  out.rs
_005_iterators_and_closures/src/: main.rs  main10_closure.rs  main2_iter.rs  main3_map.rs  main4_next.rs  main5_library.rs  main6_iter.rs  main7_closure.rs  main8_closure.rs  main9_zip.rs
_006_iterators_and_closures/: Cargo.toml
_006_iterators_and_closures/src/: main10_skip_zip_fold_more.rs  main11_fold.rs  main12_by_ref.rs  main13_chunks_windows.rs  main14_indices.rs  main15_peekable.rs  main16_dgb.rs  main2_filter_map.rs  main3_ok.rs  main4_ok_or.rs  main5_ok_or_else.rs  main6_and_then.rs  main7_and.rs  main8_flatten.rs  main9_all.rs
_007_lifetimes_interio_mutability/: Cargo.toml
_007_lifetimes_interio_mutability/src/: main.rs  main10_ref_cell.rs  main11_mutex.rs  main12_deadlock.rs  main13_Rwlock.rs  main2_lifetimes.rs  main3_lifetime_type.rs  main4_lifetime_type.rs  main5_anonymous_lifetime.rs  main6_test.rs  main7_lifetime.rs  main8_interior_mutability.rs  main9_interior_mut_cell.rs  summary.txt
_008_multiple_threads_more/: Cargo.toml  summary.txt
_008_multiple_threads_more/src/: main.rs  main10_move.rs  main11_closure_types.rs  main12_move_again.rs  main2_todo.rs  main3_type_aliases.rs  main4_cow.rs  main5_cow.rs  main6_rc_intro.rs  main7_rc.rs  main8_rc_more.rs  main9_thread.rs
_009_more_closures_generics_threads/: Cargo.toml  summary.txt
_009_more_closures_generics_threads/src/: main.rs  main10_arc_intro.rs  main11_arc.rs  main12_refactor.rs  main13_rwlock.rs  main14_scoped_threads.rs  main15_scoped_threads.rs  main16_channels.rs  main17_channels.rs  main18_channels.rs  main19_thread_pool.rs  main2_closures.rs  main3_relationship.rs  main4_closures_are_all_unique.rs  main5_example.rs  main6_intro_impl.rs  main7_impl.rs  main8_return_closures.rs  main9_return_closures.rs
_010_box_rust_doc/: Cargo.toml
_010_box_rust_doc/src/: main.rs  main10_downcast.rs  main2_copy_clone.rs  main3_deprecated.rs  main4_box.rs  main5_box.rs  main6_box.rs  main7_box_error.rs  main8_errors.rs  main9_error.rs  summary.txt
_011_testing_building/: Cargo.toml  summary.txt
_011_testing_building/src/: main.rs  main2_pub.rs  main3_mod_inside_mod.rs  main4_tests.rs  main5_tests.rs  main6_tests.rs
_012_default_builder_pattern_and_deref/: Cargo.toml
_012_default_builder_pattern_and_deref/src/: main.rs  main10_deref.rs  main11_deref_mut.rs  main2_default.rs  main3_default_cases.rs  main4_builder.rs  main5_builder_refactor.rs  main6_builder_rafactor2.rs  main7_deref_intro.rs  main8_deref.rs  main9_deref.rs  summary.txt
_013_const_unsafe_and_extern_crates/: Cargo.toml
_013_const_unsafe_and_extern_crates/src/: main.rs  main2_const_fn.rs  main3_mut_static.rs  summary.txt
_014_popular_crates/: Cargo.toml  summary.txt
_014_popular_crates/src/: main.rs  main10_blanket.rs  main11_blanket.rs  main12_blanket.rs  main13_logging.rs  main2_time_default.rs  main3_time_default.rs  main4_chrono.rs  main5_chrono.rs  main6_chrono.rs  main7_rayon.rs  main8_blanket_trait.rs  main9_blanket_trait_error.rs
_015_rust_on_computer/: Cargo.toml  calvin_with_dad.txt  calvin_with_dad2.txt  summary.txt
_015_rust_on_computer/src/: main.rs  main2_command_line.rs  main4_env.rs  main5_env.rs  main7_files.rs
_016_more_crates_async_rust/: Cargo.toml
_016_more_crates_async_rust/src/: main.rs  main2_async.rs  main3_async.rs  main4_async.rs  main5_async.rs  main6_async.rs  main7_without_join.rs  main8_select.rs  main9_try_join.rs  summary.txt
_017_tour_to_std/: Cargo.toml
_017_tour_to_std/src/: main.rs  main10_associated_consts.rs  main11_bool.rs  main12_vec.rs  main13_string.rs  main2_from.rs  main3_from_fn.rs  main4_char.rs  main5_integers.rs  main6_ops_traits.rs  main7_floats.rs  main8_associated_types.rs  main9_associated_consts.rs  summary.txt
_018_rust_on_computer/: Cargo.toml
_018_rust_on_computer/src/: main3_env.rs  main6_files.rs  main8_doc.rs
_018_tour_continue/: Cargo.toml  summary.txt
_018_tour_continue/src/: main.rs  main10_backtrace.rs  main11_backtrace.rs  main12_prelude.rs  main13_macros.rs  main14_macros.rs  main15_thread_local.rs  main16_cfg.rs  main17_cfg.rs  main2_swap.rs  main3_replace.rs  main4_take.rs  main5_take.rs  main6_panic_hooks.rs  main7_panic_hooks.rs  main8_panic_hooks.rs  main9_undo_panic.rs
_019_my_own_macros/: Cargo.toml  summary.txt
_019_my_own_macros/src/: main.rs  main2_macros.rs  main3_macros.rs  main4_macros.rs  main5_macros.rs  main6_macros.rs  main7_matches.rs
