[package]
name = "structs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main2"
path = "src/main2.rs"

[[bin]]
name = "main3"
path = "src/main3.rs"

[[bin]]
name = "main4"
path = "src/main4.rs"

[[bin]]
name = "main5"
path = "src/main5.rs"

[[bin]]
name = "main6"
path = "src/main6.rs"

[[bin]]
name = "main7"
path = "src/main7_destructing.rs"


[[bin]]
name = "main8"
path = "src/main8_destrc.rs"

[[bin]]
name = "main9"
path = "src/main9.rs"

[[bin]]
name = "main10"
path = "src/main10.rs"








[dependencies]
