[package]
name = "generics_option_result_002"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "main2"
path = "src/main2.rs"

[[bin]]
name = "main3"
path = "src/main3_option.rs"


[[bin]]
name = "main4"
path = "src/main4_option.rs"


[[bin]]
name = "main5"
path = "src/main5_option.rs"

[[bin]]
name = "main6"
path = "src/main6_result.rs"

[[bin]]
name = "main7"
path = "src/main7_if_let.rs"

[[bin]]
name = "main8"
path = "src/main8_let_else.rs"

[[bin]]
name = "main9"
path = "src/main9_let_else.rs"

[[bin]]
name = "main10"
path = "src/main10_while_let.rs"

[[bin]]
name = "main11"
path = "src/main11_summary.rs"







[dependencies]
