[package]
name = "_005_iterators_and_closures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main2"
path = "src/main2_iter.rs"

[[bin]]
name = "main3"
path = "src/main3_map.rs"

[[bin]]
name = "main4"
path = "src/main4_next.rs"

[[bin]]
name = "main5"
path = "src/main5_library.rs"


[[bin]]
name = "main6"
path = "src/main6_iter.rs"

[[bin]]
name = "main7"
path = "src/main7_closure.rs"

[[bin]]
name = "main8"
path = "src/main8_closure.rs"

[[bin]]
name = "main9"
path = "src/main9_zip.rs"

[[bin]]
name = "main10"
path = "src/main10_closure.rs"










[dependencies]
