[package]
name = "_008_multiple_threads_more"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "main2"
path = "src/main2_todo.rs"
[[bin]]
name = "main3"
path = "src/main3_type_aliases.rs"
[[bin]]
name = "main4"
path = "src/main4_cow.rs"

[[bin]]
name = "main5"
path = "src/main5_cow.rs"

[[bin]]
name = "main6"
path = "src/main6_rc_intro.rs"

[[bin]]
name = "main7"
path = "src/main7_rc.rs"

[[bin]]
name = "main8"
path = "src/main8_rc_more.rs"

[[bin]]
name = "main9"
path = "src/main9_thread.rs"

[[bin]]
name = "main10"
path = "src/main10_move.rs"

[[bin]]
name = "main11"
path = "src/main11_closure_types.rs"

[[bin]]
name = "main12"
path = "src/main12_move_again.rs"