[package]
name = "_011_testing_building"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main2"
path = "src/main2_pub.rs"

[[bin]]
name = "main3"
path = "src/main3_mod_inside_mod.rs"

[[bin]]
name = "main4"
path = "src/main4_tests.rs"


[[bin]]
name = "main5"
path = "src/main5_tests.rs"

[[bin]]
name = "main6"
path = "src/main6_tests.rs"























[dependencies]
