[package]
name = "_014_popular_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main2"
path = "src/main2_time_default.rs"

[[bin]]
name = "main3"
path = "src/main3_time_default.rs"

[[bin]]
name = "main4"
path = "src/main4_chrono.rs"

[[bin]]
name = "main5"
path = "src/main5_chrono.rs"



[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
