[package]
name = "_018_tour_continue"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "main2"
path = "src/main2_swap.rs"

[[bin]]
name = "main3"
path = "src/main3_replace.rs"

[[bin]]
name = "main4"
path = "src/main4_take.rs"

[[bin]]
name = "main5"
path = "src/main5_take.rs"


[[bin]]
name = "main6"
path = "src/main6_panic_hooks.rs"

[[bin]]
name = "main7"
path = "src/main7_panic_hooks.rs"

[[bin]]
name = "main8"
path = "src/main8_panic_hooks.rs"

[[bin]]
name = "main9"
path = "src/main9_undo_panic.rs"

[[bin]]
name = "main10"
path = "src/main10_backtrace.rs"

[[bin]]
name = "main11"
path = "src/main11_backtrace.rs"

[[bin]]
name = "main12"
path = "src/main12_prelude.rs"

[[bin]]
name = "main13"
path = "src/main13_macros.rs"

[[bin]]
name = "main14"
path = "src/main14_macros.rs"

[[bin]]
name = "main15"
path = "src/main15_thread_local.rs"

[[bin]]
name = "main16"
path = "src/main16_cfg.rs"

[[bin]]
name = "main17"
path = "src/main17_cfg.rs"


[dependencies]
rand = "0.9.0-alpha.1"
lazy_static = "1.4.0"